--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,12 +1,19 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
-    </body>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="{{asset('vendor/bootstrap/4.5.2/css/bootstrap.min.css')}}">
+    {#<link rel="stylesheet" href="{{asset('vendor/fontawesome/5.14.0/css/all.css')}}">#}
+    <title>{% block title %}{% endblock %} | Commerce Kitty</title>
+    {% block stylesheets %}{% endblock %}
+  </head>
+  <body>
+    {% block body %}{% endblock %}
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="{{asset('vendor/bootstrap/4.5.2/js/bootstrap.min.js')}}"></script>
+    <script src="{{asset('vendor/fontawesome/5.14.0/js/all.js')}}"></script>
+    {% block javascripts %}{% endblock %}
+  </body>
 </html>
