--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -1,20 +1,12 @@
-{% extends 'base.html.twig' %}
+{% extends 'layout.html.twig' %}
 
-{% block title %}Hello DefaultController!{% endblock %}
+{% block title %}Homepage{% endblock %}
 
-{% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/home/joshua/code/commercekitty/commercekitty/src/Controller/DefaultController.php'|file_link(0) }}">src/Controller/DefaultController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/home/joshua/code/commercekitty/commercekitty/templates/default/index.html.twig'|file_link(0) }}">templates/default/index.html.twig</a></code></li>
-    </ul>
-</div>
+{% block content %}
+  <div class="row">
+    <div class="col-sm">
+      Hello Commerce Kitty!
+      <i class="fas fa-user"></i>
+    </div>
+  </div>
 {% endblock %}
