--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -1,6 +1,38 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="{{path('homepage')}}">
+      <img src="{{asset('images/commercekitty/logo.png')}}" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
+      Commerce Kitty
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#"><i class="fas fa-list fa-fw"></i>&nbsp;{{'products'|trans}}</a>
+        </li>
+      </ul>
+      <ul class="navbar-nav my-2 my-lg-0">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            {{app.user}}
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            {#
+            <a class="dropdown-item" href="#">Settings</a>
+            <a class="dropdown-item" href="#">Account Settings</a>
+            <div class="dropdown-divider"></div>
+            #}
+            <a class="dropdown-item" href="{{path('logout')}}"><i class="fas fa-sign-out-alt fa-fw"></i>&nbsp;{{'logout'|trans}}</a>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
   <div class="container">
     {% block content %}{% endblock %}
   </div>
