--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,35 +1,47 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Log In{% endblock %}
+{% block title %}{{'Log In'|trans}}{% endblock %}
 
 {% block body %}
-  {% import 'bootstrap.html.twig' as bootstrap %}
+  {% embed '_bootstrap/grid.html.twig' %}
+    {% block content %}
+      {% import '_bootstrap/grid.html.twig' as grid %}
+      {% import '_bootstrap/button.html.twig' as btn %}
+      {% import '_bootstrap/alert.html.twig' as alert %}
+      {{grid.row_start('pt-3')}}
+        {{grid.col_start('sm-12')}}
+
+          {% if error %}
+            {{alert.danger(error.messageKey|trans(error.messageData, 'security'))}}
+          {% endif %}
+          <form method="post">
+            <div class="form-group">
+              <label for="inputEmail">{{'Email'|trans}}</label>
+              <input type="email" value="{{last_username}}" name="email" id="inputEmail" class="form-control form-control-lg" required autofocus placeholder="kitty@commercekitty.com">
+            </div>
+            <div class="form-group">
+              <label for="inputPassword">{{'Password'|trans}}</label>
+              <input type="password" name="password" id="inputPassword" class="form-control form-control-lg" required>
+            </div>
+            {#
+            <div class="form-group form-check">
+              <input type="checkbox" class="form-check-input" id="_remember_me">
+              <label class="form-check-label" for="_remember_me">Remember Me</label>
+            </div>
+            #}
+
+            <input type="hidden" name="_csrf_token" value="{{csrf_token('authenticate')}}">
+            {{btn.submit('fas fa-sign-in-alt fa-fw', 'Sign-in')}}
+          </form>
+
+        {{grid.col_end()}}
+      {{grid.row_end()}}
+    {% endblock content %}
+  {% endembed %}
   <div class="container">
     <div class="row">
       <div class="col-sm">
-        {% if error %}
-          <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-        {% endif %}
 
-        <form method="post">
-          <div class="form-group">
-            <label for="inputEmail">Email</label>
-            <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control form-control-lg" required autofocus placeholder="kitty@commercekitty.com">
-          </div>
-          <div class="form-group">
-            <label for="inputPassword">Password</label>
-            <input type="password" name="password" id="inputPassword" class="form-control form-control-lg" required>
-          </div>
-          {#
-          <div class="form-group form-check">
-            <input type="checkbox" class="form-check-input" id="_remember_me">
-            <label class="form-check-label" for="_remember_me">Remember Me</label>
-          </div>
-          #}
-
-          <input type="hidden" name="_csrf_token" value="{{csrf_token('authenticate')}}">
-          {{bootstrap.btn('Submit')}}
-        </form>
 
       </div>
     </div>
