--- a/templates/change_password/change_password.html.twig
+++ b/templates/change_password/change_password.html.twig
@@ -4,13 +4,13 @@
 #}
 {% extends 'layout.html.twig' %}
 
-{% block title %}{{'edit'|trans}} | {{'profile'|trans}}{% endblock %}
+{% block title %}{{'change password'|trans}}{% endblock %}
 
 {% block breadcrumbs %}
   {% embed '_bootstrap/breadcrumb.html.twig' %}
     {% block crumbs %}
       {% import '_bootstrap/breadcrumb.html.twig' as breadcrumb %}
-      {{breadcrumb.item('edit')}}
+      {{breadcrumb.item('change password')}}
     {% endblock %}
   {% endembed %}
 {% endblock breadcrumbs %}
