more things to not forget about

--- a/templates/channel/show.html.twig
+++ b/templates/channel/show.html.twig
@@ -23,7 +23,9 @@
         <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
           <a class="nav-link disabled" href="#"><i class="fas fa-plug fa-fw"></i>&nbsp;{{'test connection'|trans}}</a>
           <a class="nav-link disabled" href="#"><i class="fas fa-cloud-download-alt fa-fw"></i>&nbsp;{{'import products'|trans}}</a>
+          <a class="nav-link disabled" href="#"><i class="fas fa-cloud-download-alt fa-fw"></i>&nbsp;{{'import orders'|trans}}</a>
           <a class="nav-link disabled" href="#"><i class="fas fa-cloud-upload-alt fa-fw"></i>&nbsp;{{'export inventory'|trans}}</a>
+          <a class="nav-link disabled" href="#"><i class="fas fa-cloud-upload-alt fa-fw"></i>&nbsp;{{'export listings'|trans}}</a>
           <a class="nav-link" href="{{path('channel_edit', {'id':entity.id})}}"><i class="fas fa-edit fa-fw"></i>&nbsp;{{'edit'|trans}}</a>
           <a class="nav-link" href="{{path('channel_clone', {'id':entity.id})}}"><i class="fas fa-clone fa-fw"></i>&nbsp;{{'clone'|trans}}</a>
           {#<a class="nav-link" href="{{path('channel_log', {'id':entity.id})}}"><i class="fas fa-terminal fa-fw"></i>&nbsp;{{'log'|trans}}</a>#}
