--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -21,7 +21,7 @@
       <div class="col-sm-2">
         {# @todo menu event, include product/_menu.html.twig #}
         <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-          <a class="nav-link disabled" href="#"><i class="fas fa-boxes fa-fw"></i>&nbsp;{{'inventory'|trans}}</a>
+          <a class="nav-link" href="{{path('product_inventory', {'id':entity.id})}}"><i class="fas fa-boxes fa-fw"></i>&nbsp;{{'inventory'|trans}}</a>
           <a class="nav-link" href="{{path('product_edit', {'id':entity.id})}}"><i class="fas fa-edit fa-fw"></i>&nbsp;{{'edit'|trans}}</a>
           <a class="nav-link" href="{{path('product_clone', {'id':entity.id})}}"><i class="fas fa-clone fa-fw"></i>&nbsp;{{'clone'|trans}}</a>
           {#<a class="nav-link" href="{{path('product_log', {'id':entity.id})}}"><i class="fas fa-terminal fa-fw"></i>&nbsp;{{'log'|trans}}</a>#}
