--- a/templates/event_store/aggregate/index.html.twig
+++ b/templates/event_store/aggregate/index.html.twig
@@ -1,16 +1,10 @@
+{#
+  @var AggregateInterface[] pager
+  @var string               aggregate
+#}
 {% extends 'layout.html.twig' %}
 
 {% block title %}{{'event stores'|trans}}{% endblock %}
-
-{% block breadcrumbs %}
-  {% embed '_bootstrap/breadcrumb.html.twig' %}
-    {% block crumbs %}
-      {% import '_bootstrap/breadcrumb.html.twig' as breadcrumb %}
-      {{breadcrumb.item('event stores', 'event_store_index')}}
-      {{breadcrumb.item('warehouses')}}
-    {% endblock %}
-  {% endembed %}
-{% endblock breadcrumbs %}
 
 {% block content %}
   <div class="container-fluid">
@@ -19,7 +13,7 @@
         {% embed '_bootstrap/table.html.twig' %}
           {% block thead %}
             <tr>
-              <th>{{'timestamp'}}</th>
+              <th>{{knp_pagination_sortable(pager, 'timestamp', 'e.createdAt')}}</th>
               <th>{{'event id'}}</th>
               <th>{{'event type'}}</th>
               <th>{{'aggregate root version'}}</th>
@@ -30,7 +24,7 @@
             {% for entity in pager %}
               <tr>
                 <td>{{entity.createdAt|format_datetime}}</td>
-                <td><a href="{{path('event_store_aggregate_show',{'aggregate':'warehouse','id':entity.eventId})}}">{{entity.eventId}}</a></td>
+                <td><a href="{{path('event_store_aggregate_show',{'aggregate':aggregate, 'id':entity.eventId})}}">{{entity.eventId}}</a></td>
                 <td>{{entity.eventType}}</td>
                 <td>{{entity.aggregateRootVersion}}</td>
                 <td>{{entity.aggregateRootId}}</td>
@@ -38,6 +32,11 @@
             {% endfor %}
           {% endblock %}
         {% endembed %}
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-12">
+        {{knp_pagination_render(pager)}}
       </div>
     </div>
   </div>
